# Tellus-demo

./: .env.example  .gitignore  CLAUDE.md  README.md
.cursor/rules/: code-review-required.mdc
.planning/: TELLUS_FULL_IMPLEMENTATION_PLAN.md
backend/: package-lock.json  package.json  wrangler.toml
backend/src/: index.ts
docs/: API_MAPPING.md  ARCHITECTURE.md  SCENARIOS.md
docs/schema/: infrastructure_data.v2.json
e2e/: analyst-mode.spec.ts  dashboard.spec.ts  features.spec.ts  new-features.spec.ts  package-lock.json  package.json  playwright.config.ts  scenario-filter.spec.ts
infra/github/workflows/: ci.yml  fetch-cron.yml
scripts/: fetch_tellus_data.py  pyproject.toml  tellus_client.py
scripts/pipeline/: attach_datasets_catalog.py  cache_thumbnails.py  demo_png.py  diff_observations.py  enrich_scenes.py  generate_disaster_archive.py  generate_industry_templates.py  generate_multi_sensor.py  generate_sar_thumbnails.py  merge_tellusar_result.py  migrate_v2.py  notify.py  pipeline_summary.py  quality_report.py  select_tellusar_pair.py  tellusar_jobs.py  thumbnail_manifest.py
scripts/tests/: test_cache_thumbnails.py  test_diff_observations.py  test_merge_tellusar.py  test_quality_report.py  test_select_tellusar_pair.py
web_app/: README.md  pubspec.yaml
web_app/assets/data/: disaster_archive.json  (+3 more)
web_app/integration_test/: dashboard_e2e_test.dart
web_app/lib/: main.dart
web_app/test/: bundled_asset_path_test.dart  dashboard_view_model_test.dart  template_switcher_view_model_test.dart  widget_test.dart
web_app/web/: index.html  manifest.json
(+65 files in other folders)
